--- a/alemneh/package.json
+++ b/alemneh/package.json
@@ -11,5 +11,10 @@
     "start": "node server.js"
   },
   "author": "alemneh asefa",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "mongoose": "^4.4.8"
+  }
 }
