--- a/alemneh/package.json
+++ b/alemneh/package.json
@@ -16,5 +16,11 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.8"
+  },
+  "devDependencies": {
+    "chai-http": "^2.0.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-mocha": "^2.2.0"
   }
 }
